add links to index.html

--- a/profile-card-component/index.html
+++ b/profile-card-component/index.html
@@ -57,8 +57,8 @@
 
   </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Prashun Chitrakar</a>.
+    Challenge by <a href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/prashunchitkr">Prashun Chitrakar</a>.
   </div>
 </body>
 
